Add module type to package.json to eliminate ESLint warning

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tacivo-landing-page",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
